# dnd_map_view

./: .gitignore  CMakeLists.txt  ConsoleScreen.qml  MediaItem.qml  PresenterScreen.qml  cell_model.cpp  cell_model.h  dnd_map_view.cpp  dnd_map_view.qrc  image_view.h  renderer.h  view_controller.cpp  view_controller.h
.github/workflows/: windows.yml
renderers/: image_renderer.cpp  image_renderer.h  pdf_renderer.cpp  pdf_renderer.h
